# ChangeLog for net-libs/telepathy-qt4
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-qt4/ChangeLog,v 1.6 2011/03/23 08:23:47 scarabeus Exp $

*telepathy-qt4-0.5.12 (23 Mar 2011)

  23 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/0.5.12_automagicness.patch, +telepathy-qt4-0.5.12.ebuild,
  metadata.xml:
  Version bump. Fix automagicness. Non-maintainer commit.

*telepathy-qt4-0.5.8 (04 Mar 2011)

  04 Mar 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  +telepathy-qt4-0.5.8.ebuild:
  Version bump, cleanup: glib/gnome depedencies are now optional

*telepathy-qt4-0.5.6 (13 Feb 2011)

  13 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -telepathy-qt4-0.3.4-r1.ebuild, +telepathy-qt4-0.5.6.ebuild:
  Version bump. Drop older. Non-maintainer commit.

*telepathy-qt4-0.5.0 (18 Nov 2010)

  18 Nov 2010; Tomas Touceda <chiiph@gentoo.org>
  +telepathy-qt4-0.5.0.ebuild:
  Version bump

*telepathy-qt4-0.3.4-r1 (02 Jun 2010)

  02 Jun 2010; Markos Chandras <hwoarang@gentoo.org>
  -telepathy-qt4-0.3.4.ebuild, +telepathy-qt4-0.3.4-r1.ebuild:
  Use static-libs use flag instead of static. Fixes bug #322493 thanks to
  Kacper Kowalik (Xarthisius)

*telepathy-qt4-0.3.4 (30 May 2010)

  30 May 2010; Markos Chandras <hwoarang@gentoo.org>
  +telepathy-qt4-0.3.4.ebuild, +metadata.xml:
  Initial commit of telepathy-qt4. Moved from qting-edge overlay. Fixes bug
  #300397
