@@ -1,11 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 0.5.12_automagicness.patch 6917 RMD160 e9dc8451123f82436f239a2adab436e2744d9b39 SHA1 2c9592cc749055736445969a97d3ffda2b26ca18 SHA256 74585bf7d2e746a66864deb1f3858f1c1aeb63bf4c9314310b1ae40890c15f2b
-DIST telepathy-qt4-0.5.0.tar.gz 2622886 RMD160 2abbc67ee0e6b18467ae98bf1bc90747bcb6fe33 SHA1 9ae381b038af4b4c2f68d29f2ff32812584dd521 SHA256 7a89e430df41b019248fbd78330dbbf15def4f4793d074025c7166d402a6fe07
-DIST telepathy-qt4-0.5.12.tar.gz 3050583 RMD160 688479544825652a04429640394782c466a243a3 SHA1 000405c04c6d1d7df787c578d04024c2339b4072 SHA256 505c92238ccc1c82d0dcf483238716e0d86a5eb9c8135b2110f4ab62b6212e5c
-DIST telepathy-qt4-0.5.6.tar.gz 1899276 RMD160 c1edc528a093bb06736d3723aee7946aaf902711 SHA1 5f74e792e7502e86bd4354cb4f9d6605ce13e41a SHA256 c479445035f394e1f7199c58789627e648e94b1d806dd4e4e77c19c763d1d349
-DIST telepathy-qt4-0.5.8.tar.gz 2849697 RMD160 47558d4745798b3d0258c50ae73f281a40f434b9 SHA1 9d7725e7c6ce744781e3c1547d068cc36243454a SHA256 33ad245783ab303c080cedb8df49d7e190d1e6be6f2fa68a2d76fe71067a6dae
-EBUILD telepathy-qt4-0.5.0.ebuild 901 RMD160 58bba3dd7c46dee3d4e23348266a366862b54671 SHA1 c3add206d81f314614ea156fa2bb41712d31443a SHA256 5d397102a9be46bcb4f542de2dc2e392cb79c6774e3db9e87f4bc9075831bf4f
-EBUILD telepathy-qt4-0.5.12.ebuild 1129 RMD160 35186ae85b32b62961172efe6772381895f4da0c SHA1 88315d68cfe22129193b5c304eb77c3333ad8ee2 SHA256 46e2ce435e1d2f84d924edb4921b8c317a7a0355b871c11de4f33582d8d5f5fb
-EBUILD telepathy-qt4-0.5.6.ebuild 845 RMD160 7f111451ef015f9a0eaccca3b25be111d484f02f SHA1 7528d17a3bb31d14c1cbbec64aac6ea9c4148878 SHA256 0b7d5dd0cbc723b854d7ef3571948fbded9dad8b296874683f62f482af20262a
-EBUILD telepathy-qt4-0.5.8.ebuild 945 RMD160 7123f8ccc5492379bec0ffdd2a0f93936363dc44 SHA1 b591c0ee433d05de79821dd9d22a459744b3b3c4 SHA256 e2fa9fd0cddef0c314807769aecfee25b1a61930e5f645c6fc8450f5dcc1d497
-MISC ChangeLog 1463 RMD160 5ce2fdd7da6f1436fe1bde0f93fc7e4e99ee5552 SHA1 239187ff59d06570df41f73a036940305f79ceca SHA256 8efbbf3ba9d78ab97359fa738942e94e6ffdc420b873fd979fde8d52bbeb7745
+DIST telepathy-qt4-0.5.15.tar.gz 3327150 RMD160 10c684c7baffe41a185fee08e16d32c12ab85faa SHA1 13c0e94e1368e4f3ce8c540676296a5a60991883 SHA256 ee051b5a96f0812e8749433808673a75a049d1f97d3c035b8b2b08dce5db9b6a
+EBUILD telepathy-qt4-0.5.15.ebuild 1130 RMD160 50eec3167a13064576651813a409e4eb68f17902 SHA1 48f97116ba7e230b77ca5112b41f879a1a378670 SHA256 50491e0b617e1acd9541436634e4cd0c10662ef2630487428bd9ad403b13a8d0
+MISC ChangeLog 1741 RMD160 891382118298e46291469b87545d615c9c7bfe65 SHA1 b93196590eaa3f1c28f11f2cc85a9c89b1f6ffc5 SHA256 532d68a0161b904278446c4773bae0a9b6306be38fc27981a3dc6c88db6757ae
 MISC metadata.xml 335 RMD160 e68f892510261f37859207aab171783893e86e1f SHA1 756c52f911aa8c3c5487a53500828106ee6554d9 SHA256 f43ecaefe6736cbcadb34db002b505ec454ab7d0328de46c9a6795ff3c212970
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk2u0hsACgkQHB6c3gNBRYd8CQCgmSrU7Pv8e0sr8AC6amNgbEAP
+UykAoL4bl6R36Kv/bJLVlD5w+u4jehJC
+=0WQC
+-----END PGP SIGNATURE-----
