@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-qt4/telepathy-qt4-0.5.8.ebuild,v 1.1 2011/03/04 12:56:43 tampakrap Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-qt4/telepathy-qt4-0.5.15.ebuild,v 1.1 2011/04/20 12:31:17 scarabeus Exp $
 
 PYTHON_DEPEND="2"
 
@@ -14,19 +14,27 @@ SRC_URI="http://telepathy.freedesktop.org/releases/${PN}/${P}.tar.gz"
 LICENSE="LGPL-2.1"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="debug glib gstreamer"
+IUSE="debug glib farsight"
 
 RDEPEND="
-	glib? (
+	x11-libs/qt-core:4[glib?]
+	x11-libs/qt-dbus:4
+	dev-python/dbus-python
+	farsight? (
+		dev-libs/dbus-glib
+		dev-libs/libxml2
+		media-libs/gstreamer
 		net-libs/telepathy-glib
 		net-libs/telepathy-farsight
 	)
-	gstreamer? ( media-libs/gstreamer )
-	x11-libs/qt-core:4[glib?]
-	x11-libs/qt-dbus:4"
+"
 DEPEND="${RDEPEND}
 	dev-libs/libxslt
 	dev-util/pkgconfig"
+
+PATCHES=(
+	"${FILESDIR}/0.5.12_automagicness.patch"
+)
 
 pkg_setup() {
 	python_set_active_version 2
@@ -34,6 +42,10 @@ pkg_setup() {
 }
 
 src_configure() {
-	local mycmakeargs=( "-DHAVE_QDBUSVARIANT_OPERATOR_EQUAL=1" )
+	local mycmakeargs=(
+		$(cmake-utils_use_enable debug DEBUG_OUTPUT)
+		$(cmake-utils_use_with glib)
+		$(cmake-utils_use_with farsight)
+	)
 	cmake-utils_src_configure
 }
