@@ -1,6 +1,14 @@
 # ChangeLog for net-libs/telepathy-qt4
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-qt4/ChangeLog,v 1.6 2011/03/23 08:23:47 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-qt4/ChangeLog,v 1.7 2011/04/20 12:31:17 scarabeus Exp $
+
+*telepathy-qt4-0.5.15 (20 Apr 2011)
+
+  20 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org>
+  -telepathy-qt4-0.5.0.ebuild, -telepathy-qt4-0.5.6.ebuild,
+  -telepathy-qt4-0.5.8.ebuild, -telepathy-qt4-0.5.12.ebuild,
+  +telepathy-qt4-0.5.15.ebuild:
+  Version bump. Drop all older.
 
 *telepathy-qt4-0.5.12 (23 Mar 2011)
 
